(library
  (name fsml)
  (public_name fsml)
  (modules misc lexing expr state guard action transition dot events stimuli fsm simul seqmodel c vhdl)
  (libraries yojson ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))

(library
 (name ppx_fsm_trans)
 (modules ppx_fsm_trans)
 (wrapped false)
 (kind ppx_rewriter)
 (libraries fsml ppxlib)
 (ppx_runtime_libraries fsml)
 (preprocess (pps ppxlib.metaquot)))
