(library
  (name fsml)
  (public_name fsml)
  (modules misc expr state guard action transition dot events stimuli fsm simul seqmodel c vhdl parse fsm_lexer fsm_parser)
  (libraries yojson ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))

(ocamllex
  (modules fsm_lexer))

(menhir
  (modules fsm_parser))

(library
 (name ppx_fsm_trans)
 (modules ppx_fsm_trans)
 (wrapped false)
 (kind ppx_rewriter)
 (libraries fsml ppxlib)
 (ppx_runtime_libraries fsml)
 (preprocess (pps ppxlib.metaquot)))

(library
 (name ppx_fsm_action)
 (modules ppx_fsm_action)
 (wrapped false)
 (kind ppx_rewriter)
 (libraries fsml ppxlib)
 (ppx_runtime_libraries fsml)
 (preprocess (pps ppxlib.metaquot)))

(library
 (name ppx_fsm_stim)
 (modules ppx_fsm_stim)
 (wrapped false)
 (kind ppx_rewriter)
 (libraries fsml ppxlib)
 (ppx_runtime_libraries fsml)
 (preprocess (pps ppxlib.metaquot)))

(library
 (name ppx_fsm)
 (modules ppx_fsm)
 (wrapped false)
 (kind ppx_rewriter)
 (libraries fsml ppxlib)
 (ppx_runtime_libraries fsml)
 (preprocess (pps ppxlib.metaquot)))
