(library
  (name fsml)
  (public_name fsml)
  (modules misc types builtins typing expr valuation state guard action transition dot event tevents fsm clock simul vcd seqmodel c vhdl parse fsm_lexer fsm_parser)
  (libraries unix yojson ppx_deriving_yojson.runtime)
  (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))

(ocamllex
  (modules fsm_lexer))

(menhir
  (modules fsm_parser))

(library
 (name ppx_fsm)
 (modules ppxs)
 (wrapped false)
 (kind ppx_rewriter)
 (libraries fsml ppxlib)
 (ppx_runtime_libraries fsml)
 (preprocess (pps ppxlib.metaquot)))
