(executable
 (name test1)
 (modules test1)
 (libraries newfsm yojson ppx_deriving_yojson.runtime)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))

(executable
 (name test2)
 (modules test2)
 (libraries newfsm yojson ppx_deriving_yojson.runtime)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))

(executable
 (name test3)
 (modules test3)
 (libraries newfsm yojson ppx_deriving_yojson.runtime)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson)))
